--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2 class="relatorio">Relatório da Conta</h2>
         <div id="relatorio"></div>
 
-    <script src="index.html"></script>
+    <script src="index.js"></script>
     </fieldset>
 </body>
 
